[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme_test.tres" type="Theme" id=1]
[ext_resource path="res://QuitConfirmationMenu.gd" type="Script" id=2]

[node name="QuitConfirmationMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.47451, 0.443137, 0.443137, 1 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_top = 101.0
margin_right = 143.0
margin_bottom = 198.0

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 143.0
margin_bottom = 24.0
text = "Quit Game ?"
align = 1
valign = 1

[node name="HBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 143.0
margin_bottom = 97.0
custom_constants/separation = 19

[node name="QuitYesButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 143.0
margin_bottom = 25.0
focus_neighbour_left = NodePath("../QuitNoButton")
focus_neighbour_top = NodePath("../QuitNoButton")
focus_neighbour_right = NodePath("../QuitNoButton")
focus_neighbour_bottom = NodePath("../QuitNoButton")
focus_next = NodePath("../QuitNoButton")
text = "Yes"

[node name="QuitNoButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 44.0
margin_right = 143.0
margin_bottom = 69.0
focus_neighbour_left = NodePath("../QuitYesButton")
focus_neighbour_top = NodePath("../QuitYesButton")
focus_neighbour_right = NodePath("../QuitYesButton")
focus_neighbour_bottom = NodePath("../QuitYesButton")
focus_next = NodePath("../QuitYesButton")
focus_previous = NodePath("../QuitYesButton")
text = "No"

[node name="Label" type="Label" parent="."]
margin_left = 1.15665
margin_top = 114.756
margin_right = 403.157
margin_bottom = 174.756
text = "TO BE CONTINUED....."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/QuitYesButton" to="." method="_on_QuitYesButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/QuitNoButton" to="." method="_on_QuitNoButton_pressed"]
